# OrangeLive

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.2f34ead
modules/activity/: CMakeLists.txt
modules/activity/examples/helloworld/: olhelloworldentity.cpp  preload.json.in
modules/activity/examples/helloworld/qml/entity/: MainWindow.qml
modules/activity/examples/helloworld/qml/preload/: PreloadWindow.qml
modules/activity/homepage/: CMakeLists.txt  olhomepageentity.cpp  olhomepageentity.h
modules/activity/homepage/qml/entity/: MainWindow.qml
modules/activity/homepage/qml/preload/: PreloadWindow.qml
src/: CMakeLists.txt
src/controls/: CMakeLists.txt  controls.cmake
src/controls/impl/: olmpvabstractitem.cpp  olmpvabstractitem.h  olmpvabstractitem_p.h  olmpvcontroller.cpp  olmpvcontroller.h  olmpvcontroller_p.h  olmpvitem.cpp  olmpvitem.h  olmpvproperties.h  olmpvrenderer.cpp  olmpvrenderer.h  orangeqmlinstance.cpp  orangeqmlinstance.h
src/controls/modules/Controls/: CheckedAnimateButton.qml  CustomButton.qml  LineEdit.qml  SearchEdit.qml  TokIcon.qml
src/controls/modules/Style/: SearchEditStyle.qml  Style.qml
src/core/: CMakeLists.txt  config_manager.cpp  config_manager.h  entity.json.in  fileio.cpp  fileio.h  olmoduleinformation.h  olmoduleloader.cpp  olmoduleloader.h  olmoduletemplate.cpp  olmoduletemplate.h  olmoduleversioncontrol.cpp  olmoduleversioncontrol.h  orangelivecoreentity.cpp  orangelivecoreentity.h  orangelivecorepreload.cpp  orangelivecorepreload.h
src/core/config/: binaryconfigstorage.cpp  config.cpp  config.h  configobject.cpp  configobject.h  configstorage.h  jsonconfigstorage.cpp  sqliteconfigstorage.cpp
src/core/qml/entity/: FlipSwipeView.qml  MainContent.qml  MainWindow.qml  ModuleView.qml  OLLogoItem.qml  OLTemplate.qml  TemplateComponent.qml
src/core/qml/preload/: PreloadOverlay.qml  PreloadWindow.qml
src/main/: application.qrc  main.cmake  main.cpp  qtquickcontrols2.conf
src/main/android/: AndroidManifest.xml  build.gradle
src/main/android/src/org/orange/orangelive/: OrangeLiveActivity.java
src/modules/activity/examples/helloworld/: CMakeLists.txt  olhelloworldentity.h  olhelloworldpreload.cpp  olhelloworldpreload.h
src/modules/activity/examples/helloworld/qml/entity/: MainWindow.qml
src/modules/activity/homepage/: CMakeLists.txt  entity.json.in  olhomepageentity.cpp  olhomepageentity.h  olhomepagepreload.cpp  olhomepagepreload.h
src/modules/activity/homepage/impl/: androidplaybackhelper.cpp  androidplaybackhelper.h  clipboardhelper.cpp  clipboardhelper.h  playlistservice.cpp  playlistservice.h
src/modules/activity/homepage/qml/entity/: HPMainWindow.qml
src/modules/activity/homepage/qml/entity/agree/: AgDetailButtonPane.qml  AgDetailPage.qml  AgInitButtonPane.qml  AgInitPage.qml  AgTitlePane.qml  AgreementPopup.qml
src/modules/activity/homepage/qml/entity/content/: FavoritesPage.qml  HPContentTitle.qml  HPMainContent.qml  HistoryPage.qml  HomePage.qml  PlayerPage.qml  PlaylistManager.qml  PlaylistPanel.qml  ProfilePage.qml  SourcesManagerPage.qml
src/modules/activity/homepage/qml/preload/: PreloadWindow.qml
src/modules/activity/homepage/resources/files/: how_we_operate.txt  plugin_safety.txt  privacy_policy.txt  user_agreement.txt  user_rights_responsibilities.txt
src/modules/components/: CMakeLists.txt
src/provider/: CMakeLists.txt  iconimageprovider.cpp  iconimageprovider.h  olfonticonengine.cpp  olfonticonengine.h  olfonticonmanager.cpp  olfonticonmanager.h  orangecontrolsplugin.cpp
src/provider/qml/: OLIcon.qml
