file(GLOB AC_DIRS LIST_DIRECTORIES true "*")
foreach(ac_dir ${AC_DIRS})
    get_filename_component(CURRENT_DIR_NAME ${ac_dir} NAME)
    if(CURRENT_DIR_NAME STREQUAL "examples")
        if(OL_BUILD_EXAMPLE_MODULES)
            add_subdirectory(${ac_dir})
        endif()
    else()
        if(IS_DIRECTORY ${ac_dir} AND EXISTS ${ac_dir}/CMakeLists.txt)
            add_subdirectory(${ac_dir})
        endif()
    endif()
endforeach()
